<resources>
    <string name="application_name">Al Ain Zoo</string>
    <string name="ok">OK</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="lang" translatable="false">en</string>
    <string name="langTitle">Choose your preferred language</string>
    <string name="langSubTitle">You can change your language preference any time from your setting page</string>
    <string name="lang1_title">English</string>
    <string name="lang1">All content will be in English</string>
    <string name="lang2_title">العربى</string>
    <string name="lang2">جميع المحتويات ستكون بالعربية</string>
    <string name="notification">Notification</string>
    <string name="facebook_app_id">244990179202534</string>
    <string name="fb_login_protocol_scheme">fb244990179202534</string>
    <string name="google_maps_api" translatable="false">AIzaSyCvcQnA0lyefHkZ3YHkLT9xh3WoBhmdyHs</string>
    <string name="gender">Gender</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_home">Home</string>
    <string name="title_explore_zoo">Explore Zoo</string>
    <string name="title_plan_visit">Plan your visit</string>
    <string name="title_buy_ticket">Buy tickets</string>
    <string name="title_my_plan">My Plan</string>
    <string name="see_all">See All</string>
    <string name="opening_hours">Opening Hours</string>
    <string name="attractions">Attractions</string>
    <string name="attraction">Attraction</string>
    <string name="experiences">Experiences</string>
    <string name="experience">Experience</string>
    <string name="events">Events</string>
    <string name="what_is_news">What\’s new</string>
    <string name="LANGUAGE">Language</string>
    <string name="register">Register</string>
    <string name="register_log"><u>Register</u></string>
    <string name="welcome_back">Welcome Back</string>
    <string name="registeration_message">Registeration opens up a whole jungle of features!</string>
    <string name="or">OR</string>
    <string name="email_id">Email</string>
    <string name="password">Password</string>
    <string name="forget_password"><u>Forget Password?</u></string>
    <string name="login">Login</string>
    <string name="login_menu"><u>Login</u></string>
    <string name="register_with_us">Register with Us</string>
    <string name="register_via_social_media">Register via Social Media</string>
    <string name="create_account">Create Account</string>
    <string name="phone_number">Phone Number</string>
    <string name="skip"><u>Skip</u></string>
    <string name="Skip">Skip</string>
    <string name="sign_in_fc"><u>Sign In</u></string>
    <string name="tell_us_more_about_yourself_fc">Tell Us More About Yourself!</string>
    <string name="more_about_you_helps_us_customize_your_experience_fc">More about you helps us customize your experience.</string>
    <string name="your_name_afc">Your Name</string>
    <string name="date_of_birth_afc">Date of Birth</string>
    <string name="nationality_fc">Nationality</string>
    <string name="emirate">City</string>
    <string name="save_and_register">Save and Register</string>
    <string name="title_activity_test2">Test2Activity</string>
    <string name="animal">Animals</string>
    <string name="title_activity_test1">Test1Activity</string>
    <string name="read_more">Read More</string>
    <string name="search_hint">…</string>
    <string name="about_us">About Us</string>
    <string name="map">Map</string>
    <string name="request_shuttle">Request Shuttle</string>
    <string name="sos_request">SOS Request</string>
    <string name="my_park">My Park</string>
    <string name="education">Education</string>
    <string name="services">Visitor Services</string>
    <string name="zoo_camrea">Zoo Camera</string>
    <string name="title_activity_reference">ReferenceActivity</string>
    <string name="enqiure_for_services">Enqiure for Services</string>
    <string name="email_id_">E-Mail ID</string>
    <string name="date_of_services">Date of Service</string>
    <string name="time_of_services">Time of Service</string>
    <string name="collapsed">collapsed: %s</string>
    <string name="expanded">expanded: %s</string>
    <string name="all">All</string>
    <string name="educations">Educations</string>
    <string name="conservations">Conservations</string>
    <string name="oops_no_result_found">Oops! No results found</string>
    <string name="empty_seach_result_body">You can type anything in the search box above to start seeing respect results</string>
    <string name="fetching_data">Loading&#8230;</string>
    <string name="no_data_available">No Data Available</string>
    <string name="cancel">Cancel</string>
    <string name="collect">Collect</string>
    <string name="hint_search_here">Search here&#8230;</string>
    <string name="badges_earned">Badges Earned</string>
    <string name="about_the_zoo">About the Zoo</string>
    <string name="do_and_do_not">Do &amp; Don\'t</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="faq">FAQs</string>
    <string name="contact_us">Contact us</string>
    <string name="leaderboard"><u>Leaderboard</u></string>
    <string name="location">Location</string>
    <string name="nahyan_the_first_st_abu_dhabi_nunited_arab_emirates">Nahyan The First St, Abu Dhabi,  United Arab Emirates</string>
    <string name="po_box">P.O Box</string>
    <string name="contact_information">Contact Information</string>
    <string name="fax_number">FAX Number</string>
    <string name="feedback">Feedback</string>
    <string name="my_visit_plan"><u>My Visit Plan</u></string>
    <string name="facilities_services"><![CDATA[Facilities & Services]]></string>
    <string name="your_message">Your message</string>
    <string name="your_feedback_is_valuable">Your Feedback is Valuable</string>
    <string name="we_take_all_the_feedback_very_seriously_good_or_bad">Your feedback is  important</string>
    <string name="feedback_type">Feedback Type</string>
    <string name="suggestion">Suggestion</string>
    <string name="complain">Complain</string>
    <string name="send_suggestion_to">Send Suggestion To</string>
    <string name="upload_from_gallery">Upload from Gallery</string>
    <string name="capture_an_image">Capture an Image</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="go">GO</string>
    <string name="titlehappeningnow">Happening now!</string>
    <string name="happeningnow">HAPPENING NOW</string>
    <string name="title_invite">Invite</string>
    <string name="title_leaderboard">Leaderboard</string>
    <string name="title_opening_hours">Opening Hours</string>
    <string name="title_profile">Profile</string>
    <string name="title_whats_new">What’s new</string>
    <string name="no_internet_">There is no internet connection</string>
    <string name="error">An error occurred, please try again later</string>
    <string name="done">Done</string>
    <string name="name">Name</string>
    <string name="category">Category</string>
    <string name="comment">Comment</string>
    <string name="contact_number"><u>800 ZOO (966)</u></string>
    <string name="mobile_number">+97137992000</string>
    <string name="info_email">info@alainzoo.ae</string>
    <string name="_fax_contact">+97137829112</string>
    <string name="zoo_s_hours">Zoo Opening Hours</string>
    <string name="szdlc_hours">SZDLC Opening Hours</string>
    <string name="view_on_the_map">View on the Map</string>
    <string name="signin_via_social_media">Login via Social Media</string>
    <string name="registeration_opens_up_a_whole_jungle_of_features">Register and enjoy more features!</string>
    <string name="login_using_facebook">Login Using Facebook</string>
    <string name="tell_us_more_about_yourself">Tell Us More About You</string>
    <string name="more_about_you_helps_us_customize_your_experience">Tell us more about you to effectivly customize your experience</string>
    <string name="your_name">Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="nationality">Nationality</string>
    <string name="message_exit_app">Please click BACK again to exit</string>
    <string name="we_ve_come_up_with_some_tried_and_test_plans_for_our_visitors">We have here some tried and tested plans for our visitors</string>
    <string name="these_plans_ensure_you_make_the_most_out_of_your_visit">These plans ensure you make the most out of your visit!</string>
    <string name="recommended_plans">Recommended Plans</string>
    <string name="plan_your_visit">Plan Your Visit</string>
    <string name="add_animals">Add Animals</string>
    <string name="facebook_url" translatable="false">https://www.facebook.com/AlAinZooUAE/</string>
    <string name="twitter_url" translatable="false">https://twitter.com/AlAinZooUAE</string>
    <string name="snapchat_url" translatable="false"> https://www.snapchat.com/add/alainzoouae</string>
    <string name="instagram_url" translatable="false">https://www.instagram.com/alainzoouae/</string>
    <string name="youtube_url" translatable="false">https://www.youtube.com/user/AlAinZooUAE</string>
    <string name="nav_login"><u>Login</u></string>
    <string name="nav_signup"><u>Register</u></string>
    <string name="validation_enter_username">Please enter username</string>
    <string name="validation_enter_valid_username">Please enter a valid username</string>
    <string name="validation_enter_password">Please enter password</string>
    <string name="application_details">Enquiry Details</string>
    <string name="submit">Submit</string>
    <string name="apply_form_title">Please fill the below form %s by giving us the details below</string>
    <string name="apply_form_responce">Apply for %s </string>
    <string name="apply">Enquiry</string>
    <string name="enquire_for_service">Enquire for Service</string>
    <string name="okay">Okay</string>
    <string name="send_invitation_via_email">Send Invitation via Email</string>
    <string name="enter_the_email_id_of_the_family">Enter the email ID of the family member you would like to invite. An invitation link will be sent to the email ID.</string>
    <string name="send_invitation">Send Invitation</string>
    <string name="enter_email_id">Enter Email ID</string>
    <string name="aed">AED</string>
    <string name="error_mandetory">Please enter all the mandatory fields</string>
    <string name="error_name">Please enter a name</string>
    <string name="error_email">Please enter an email address</string>
    <string name="error_email_valid">Please enter a valid email address</string>
    <string name="error_comment">Please enter an comment</string>
    <string name="logout">Logout</string>
    <string name="are_you_sure_want_to_logout">Are you sure want to logout?</string>
    <string name="star" translatable="false">star</string>
    <string name="my_plan">My Plan</string>
</resources>