<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="feedbackModel"
            type="com.exceedgulf.alainzoo.models.FeedbackModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/root_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingEnd="@dimen/_16sdp"
                android:paddingStart="@dimen/_16sdp">

                <com.exceedgulf.alainzoo.views.CustomTextview
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:text="@string/your_feedback_is_valuable"
                    android:textAlignment="textStart"
                    android:textColor="@color/brownish_grey_three"
                    android:textDirection="anyRtl"
                    android:textSize="@dimen/_15ssp"
                    app:fontFamily="@string/avenir_next_demi_bold" />

                <com.exceedgulf.alainzoo.views.CustomTextview
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/we_take_all_the_feedback_very_seriously_good_or_bad"
                    android:textAlignment="textStart"
                    android:textColor="@color/brownish_grey_three"
                    android:textDirection="anyRtl"
                    android:textSize="@dimen/_13ssp"
                    app:fontFamily="@string/avenir_next_regular" />

                <com.exceedgulf.alainzoo.views.CustomTextview
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/feedback_type"
                    android:textAlignment="textStart"
                    android:textColor="@color/brownish_grey_three"
                    android:textDirection="anyRtl"
                    android:textSize="@dimen/_13ssp"
                    app:fontFamily="@string/avenir_next_demi_bold" />

                <RadioGroup
                    android:id="@+id/frFeedback_rgType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:checkedButton="@id/frFeedback_rbSuggestion"
                    android:orientation="horizontal">

                    <com.exceedgulf.alainzoo.views.CustomRadioButton
                        android:id="@+id/frFeedback_rbSuggestion"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:button="@drawable/selector_radio_button"
                        android:paddingStart="@dimen/_5sdp"
                        android:text="@string/suggestion"
                        android:textColor="@color/brownish_grey_three"
                        android:textSize="@dimen/_15ssp"
                        app:fontFamily="@string/avenir_next_demi_bold" />

                    <com.exceedgulf.alainzoo.views.CustomRadioButton
                        android:id="@+id/frFeedback_rbComplain"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:button="@drawable/selector_radio_button"
                        android:paddingStart="@dimen/_5sdp"
                        android:text="@string/complain"
                        android:textColor="@color/brownish_grey_three"
                        android:textSize="@dimen/_15ssp"
                        app:fontFamily="@string/avenir_next_demi_bold" />
                </RadioGroup>

                <com.exceedgulf.alainzoo.views.CustomTextview
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/name"
                    android:tag="@string/star"
                    android:textAlignment="textStart"
                    android:textColor="@color/brownish_grey_three"
                    android:textDirection="anyRtl"
                    android:textSize="@dimen/_13ssp"
                    app:fontFamily="@string/avenir_next_demi_bold" />

                <com.exceedgulf.alainzoo.views.CustomEdittext
                    android:id="@+id/frFeedback_edtName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/bg_feedback_border"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:padding="@dimen/_10sdp"
                    android:textAlignment="viewStart"
                    android:textDirection="anyRtl"
                    app:fontFamily="@string/avenir_next_regular" />

                <com.exceedgulf.alainzoo.views.CustomTextview
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/prompt_email"
                    android:tag="@string/star"
                    android:textAlignment="textStart"
                    android:textColor="@color/brownish_grey_three"
                    android:textDirection="anyRtl"
                    android:textSize="@dimen/_13ssp"
                    app:fontFamily="@string/avenir_next_demi_bold" />

                <com.exceedgulf.alainzoo.views.CustomEdittext
                    android:id="@+id/frFeedback_edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/bg_feedback_border"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:padding="@dimen/_10sdp"
                    android:textAlignment="viewStart"
                    android:textDirection="anyRtl"
                    app:fontFamily="@string/avenir_next_regular" />

                <com.exceedgulf.alainzoo.views.CustomTextview
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/category"
                    android:tag="@string/star"
                    android:textAlignment="textStart"
                    android:textColor="@color/brownish_grey_three"
                    android:textDirection="anyRtl"
                    android:textSize="@dimen/_13ssp"
                    app:fontFamily="@string/avenir_next_demi_bold" />

                <LinearLayout
                    android:id="@+id/frFeedback_llcategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/bg_feedback_border"
                    android:padding="@dimen/_5sdp">

                    <Spinner
                        android:id="@+id/frFeedback_spCategory"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_35sdp" />
                </LinearLayout>

                <com.exceedgulf.alainzoo.views.CustomTextview
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/comment"
                    android:tag="@string/star"
                    android:textAlignment="textStart"
                    android:textColor="@color/brownish_grey_three"
                    android:textDirection="anyRtl"
                    android:textSize="@dimen/_13ssp"
                    app:fontFamily="@string/avenir_next_demi_bold" />

                <com.exceedgulf.alainzoo.views.CustomEdittext
                    android:id="@+id/frFeedback_edtMessage"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_120sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/bg_feedback_border"
                    android:gravity="top"
                    android:hint="@string/your_message"
                    android:padding="@dimen/_8sdp"
                    android:text="@={feedbackModel.comment}"
                    android:textAlignment="viewStart"
                    android:textDirection="anyRtl"
                    android:textSize="@dimen/_14ssp"
                    app:fontFamily="@string/avenir_next_regular"
                    tools:ignore="RtlCompat" />

                <LinearLayout
                    android:id="@+id/feedback_fragment_llGallery"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:visibility="gone">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/bg_feedback_gallery_corner"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="@dimen/_8sdp">

                        <ImageView
                            android:layout_width="@dimen/_28sdp"
                            android:layout_height="@dimen/_28sdp"
                            android:src="@drawable/ic_gallery" />

                        <com.exceedgulf.alainzoo.views.CustomTextview
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:text="@string/upload_from_gallery"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textDirection="anyRtl"
                            android:textSize="@dimen/_11ssp"
                            app:fontFamily="@string/avenir_next_medium" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/feedback_fragment_llCamera"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_feedback_gallery_corner"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="@dimen/_8sdp">

                        <ImageView
                            android:layout_width="@dimen/_28sdp"
                            android:layout_height="@dimen/_28sdp"
                            android:src="@drawable/ic_camera" />

                        <com.exceedgulf.alainzoo.views.CustomTextview
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:text="@string/capture_an_image"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textDirection="anyRtl"
                            android:textSize="@dimen/_11ssp"
                            app:fontFamily="@string/avenir_next_medium" />
                    </LinearLayout>

                </LinearLayout>

                <com.exceedgulf.alainzoo.views.CustomButton
                    android:id="@+id/frFeedback_btnSend"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/bg_red_corner_edt"
                    android:text="@string/send_feedback"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_11ssp"
                    app:fontFamily="@string/avenir_next_demi_bold" />
            </LinearLayout>
        </ScrollView>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/application_name"
            android:scaleType="fitXY"
            android:tint="@color/very_light_brown"
            app:srcCompat="@drawable/header_main_home" />
    </FrameLayout>
</layout>